padding and alignment fixes

--- a/src/components/Menu/index.css
+++ b/src/components/Menu/index.css
@@ -3,7 +3,7 @@
     width: 90vw;
     height: auto;
     bottom: 0dvh;
-    margin: 5dvw 5dvw;
+    margin: 5dvw;
     display: flex;
     justify-content: space-between;
     z-index: 99;
@@ -22,7 +22,7 @@ a.navLink {
         width: 95vw;
         height: auto;
         bottom: 0dvh;
-        margin: 2.5dvw 2.5dvw;
+        margin: 2.5dvw;
         display: flex;
         justify-content: space-between;
         z-index: 10;
